--- a/leonardo/css/onboarding.css
+++ b/leonardo/css/onboarding.css
@@ -77,3 +77,92 @@ form .need-account strong a{
     color: var(--black);
     padding-left: 1rem;
 }
+
+@media (max-width:1400px) {
+    .container .content-wrapper .form-wrapper {
+        padding: 10rem 15rem 0 10rem;
+    }
+    .sign-up-container .content-wrapper .sign-up-form-wrapper {    
+        padding: 5rem 8rem 0 10rem;
+        }
+    .content-wrapper .form-wrapper h2, .sign-up-container .sign-up-form-wrapper h2 {
+        font-size: 2.2rem;
+    }
+    form input[type='email'], form input[type='password'], form input[type='text'], form input[type='date'], .form-wrapper button, .sign-up-form-wrapper button {
+        padding: 1rem;
+        width: 35rem;
+        font-size: 1.4rem;
+    }
+    .form-wrapper .small, .sign-up-form-wrapper .small, label, form span {
+        font-size: 1.1rem;
+    }
+    input::placeholder {
+        font-size: 1.4rem;
+    }
+    label {
+        padding: 1rem;
+    }
+     .center {
+        display: block;
+        margin: 0;
+    }
+
+}
+
+@media (max-width:900px) {
+    .container, .sign-up-container {
+        width: 100%;
+        max-height: 100vh;
+    }
+    .container .content-wrapper .form-wrapper {
+        padding: 5rem 15rem 0 10rem;
+    }
+    .sign-up-container .content-wrapper .sign-up-form-wrapper {    
+        padding: 5rem 8rem 0 10rem;
+        }
+    .content-wrapper .form-wrapper h2, .sign-up-container .sign-up-form-wrapper h2 {
+        font-size: 2.2rem;
+    }
+    form input[type='email'], form input[type='password'], form input[type='text'], form input[type='date'], .form-wrapper button, .sign-up-form-wrapper button {
+        padding: 1rem;
+        margin-bottom: 2rem;
+        border-radius: 2rem;
+        border: 0.1rem solid var(--grey);
+        width: 30rem;
+        font-size: 1.4rem;
+    }
+    .form-wrapper .small, .sign-up-form-wrapper .small, label, form span {
+        font-size: 1.1rem;
+    }
+    input::placeholder {
+        font-size: 1rem;
+    }
+    label {
+        padding: 1rem;
+    }
+     .center {
+        display: none;
+    }
+
+}
+@media (max-width:500px) {
+    .flex-box {
+        flex-direction: column;
+    }
+    .container .content-wrapper .image-wrapper{
+        height: 60vh;
+        width: 100vw;
+    }
+    .sign-up-container .content-wrapper .image-wrapper {
+        height: 60vh;
+        width: 100vw;
+    }
+    .container .content-wrapper .form-wrapper, .sign-up-container .sign-up-form-wrapper {
+        padding: 2rem;
+        margin: auto;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+}
