--- a/leonardo/css/large-mobile.css
+++ b/leonardo/css/large-mobile.css
@@ -30,10 +30,11 @@ html{
         text-align: center;
     }
     .nav-container .flex-item3{
+        display: flex;
         align-self: center;
         text-align: center;
-        width: 100%;
     }
+
     .nav-container .flex-item {
         margin: 0;
     }
